2005-01-31 07:30  Christian <christian@tenbyten.com>

	* Tools/gpbs.m: Correct missplaced bracket when built for windows.

2005-01-21 21:51  Alexander Malmberg  <alexander@malmberg.org>

	Various warning and whitespace cleanups.

	* Headers/x11/XGServerWindow.h,
 	* Source/art/ftfont.m,
	* Source/gsc/GSGState.m,
	* Source/win32/WIN32Server.m,
	* Source/x11/XGDragView.m,
	* Source/x11/XGServerEvent.m,
	* Source/x11/XGServerWindow.m: Change signedness of various
	variables.
	* Tools/gpbs.m: Add missing ctype.h include.
	* Source/x11/XGDrawView.m (-_setCursor): Initialize variables.

2005-01-20 22:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (-initWithContextInfo:): Enable stroke
	adjusting for the default gstate.

2005-01-20 17:58  Alexander Malmberg  <alexander@malmberg.org>

	* Source/xlib/XGGState.m (-DPSrectstroke::::): Don't decrease
	the width/height.

2005-01-15  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m (-processEvent:): For XdndPosition
	event (ClientMessage), convert the point from root coordinates
	using XTranslateCoordinates() instead of relying on cached window
	position.  Update cached window position from this.

2005-01-12 00:32  Alexander Malmberg <alexander@malmberg.org>

	* Source/gsc/GSStreamContext.m (-DPSsetstrokeadjust:):
	Give 'setstrokeadjust' a boolean argument.

2005-01-11 21:57  Alexander Malmberg <alexander@malmberg.org>

	* Headers/x11/XWindowBuffer.h: Make the pending_rect ivar a struct
	of int:s.
	* Source/x11/XWindowBuffer.m: Add casts to remove pointer sign
	warnings.
	(-_exposeRect:, -_gotShmCompletion): Update uses of pending_rect.

2005-01-11 20:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ARTGState.h: Add strokeadjust ivar.
	* Source/art/ARTContext.m (-DPScurrentstrokeadjust)
	(-DPSsetstrokeadjust): Use the strokeadjust ivar.
	* Source/art/path.m (-DPSrectclip::::): Don't use the optimized
	path if the clipping path is complex.